cmake_minimum_required(VERSION 3.28)
project(C__Workplace)
set(CMAKE_CXX_STANDARD 14)

# 包含子目录
add_subdirectory(Map)
add_subdirectory(Vector)
add_subdirectory(Queue)
add_subdirectory(Pair)
add_subdirectory(String)
add_subdirectory(Set)
add_subdirectory(Stack)
add_subdirectory(algorithm)
add_subdirectory(PTA)